# srs_hw

promprog_hw2/: Dockerfile  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini
promprog_hw2/allure-results/: 04eeeeb4-16b2-4051-8f88-d52a04cdb338-result.json  06186cfc-4fda-4a18-96d1-7d877062e325-result.json  0784cf49-4701-4c93-b49d-66ad5ab8dbc2-result.json  0cc3af68-1893-4607-89c6-1a07b9af9967-result.json  31de500b-6154-415e-8cb9-f46a0e89992b-result.json  3345823e-ccae-4175-b129-0b8de2cb3e98-result.json  33f4559c-2ca9-4e4f-8b5b-9f77c6de2134-result.json  5620670d-f582-4382-a002-dd459e71f989-result.json  6fce0bb5-098e-41fb-a5dc-39ee47b9b265-result.json  7e37291e-69bf-4447-aa9a-d335910fd30e-result.json  8e08f54f-b1e1-4cf4-89ab-4b1572906813-result.json  8e710998-a3ec-480f-90be-9f9441b84826-result.json  971a1e35-2a25-45ec-bc96-851b60be626d-result.json  a9deffab-cd9a-4d0a-be6a-5e87572d004e-result.json  ad290644-24b9-4b6d-a3fa-a85a33dbeba3-result.json  c0ed7720-e57e-41a3-84b8-535ba522f40a-result.json  c6947542-f7dc-478a-b9b6-fce8c7f7d350-result.json  c8aa6bf7-0a61-4f25-ad34-39bc491527e5-result.json  d62a362e-a6f5-4e79-93e4-e7e151f25806-result.json  dce6ee41-e6fc-4617-97ea-dd75020a4c46-result.json
promprog_hw2/app/: main.py
promprog_hw2/app/api/: tasks.py
promprog_hw2/app/domain/: exceptions.py  models.py
promprog_hw2/app/dto/: task.py
promprog_hw2/app/repositories/: memory.py
promprog_hw2/app/services/: tasks_service.py
promprog_hw2/study_task_tracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
promprog_hw2/tests/: test_api_tasks.py  test_service_tasks.py
study-task-tracker/: Dockerfile  README.md  (+4 more)
(+14 files in other folders)
