[build-system]
requires = ['setuptools>=68', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'study-task-tracker'
version = '0.2.0'
description = 'FastAPI prototype for a study task tracker with quality gates (tests, lint, type-checking).'
readme = 'README.md'
requires-python = '>=3.11'
authors = [{ name = 'Karina Shakhdullaeva' }]
dependencies = [
  'fastapi>=0.115.0',
  'uvicorn[standard]>=0.29.0',
  'pydantic>=2.6.0',
]

[project.optional-dependencies]
dev = [
  'pytest>=8.0.0',
  'pytest-cov>=4.1.0',
  'allure-pytest>=2.13.5',
  'httpx>=0.27.0',
  'black>=24.10.0',
  'isort>=5.13.2',
  'ruff>=0.6.5',
  'mypy>=1.11.2',
  'pre-commit>=4.0.1',
  'types-requests',
  'types-python-dateutil',
]

[tool.pytest.ini_options]
addopts = '-q --cov=app --cov-report=term-missing:skip-covered --cov-fail-under=90'
testpaths = ['tests']

[tool.coverage.run]
branch = true
source = ['app']

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = 'black'

[tool.ruff]
target-version = 'py311'
line-length = 88
extend-select = ['B', 'C4', 'T20', 'SIM', 'I', 'UP']
ignore = ['E501']
exclude = ['docs', 'allure-results', '.venv']

[tool.mypy]
python_version = '3.11'
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
strict_equality = true
ignore_missing_imports = true